@@ -71,3 +71,7 @@ _Uhppa_setcontext:
 
 	bv,n	%r0(%rp)
 	.procend
+#ifdef __linux__
+	/* We do not need executable stack.  */
+	.section	.note.GNU-stack,"",@progbits
+#endif
