@@ -66,3 +66,7 @@ _UI_siglongjmp_cont:
 	jmp *%edx
 	.cfi_endproc
 	.size _UI_siglongjmp_cont, .-_UI_siglongjmp_cont
+#ifdef __linux__
+	/* We do not need executable stack.  */
+	.section	.note.GNU-stack,"",@progbits
+#endif
